fixed button alignment home page

--- a/husky-learn/src/app/components/home/home.component.scss
+++ b/husky-learn/src/app/components/home/home.component.scss
@@ -22,6 +22,11 @@ mat-card-header{
 }
 .title-btn{
     display: flex;
+    justify-content: flex-start;
+    padding: 0px
+}
+.author-btn{
+    display: flex;
     justify-content: flex-end;
     padding: 0px
 }
